[Fix] comment url overflow

--- a/src/stylesheets/components/_comment.scss
+++ b/src/stylesheets/components/_comment.scss
@@ -27,6 +27,7 @@
     padding: 5px;
     text-align: left;
     white-space: pre-wrap;
+    word-wrap: break-word;
 
     &::-webkit-scrollbar {
         width: 8px;
